Fix T61088: Cycles particle viewport render stuck in loop.

Object to be instanced should not be modified.